# nano-modal

./: .gitignore  README.md  TODO.md  pyproject.toml
examples/: hello.py  image_example.py  parallel.py
nano_modal/: __init__.py  app.py  client.py  config.py  function.py  image.py  serialize.py
proto/: nano_modal.proto  nano_modal_pb2.py  nano_modal_pb2_grpc.py
rough/: phase0.md
server/: main.py  queue.py  service.py
tests/: test_sdk.py
worker/: docker_runner.py  executor.py  main.py
