[project]
name = "nano-modal"
version = "0.1.0"
description = "A minimal serverless platform for running Python functions in containers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "docker>=7.0.0",
    "redis>=5.0.0",
    "click>=8.1.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
nano-modal = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nano_modal", "server", "worker", "cli"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

